v3.0.0/_sources/plugins/discovery_range_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.discovery_range_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.discovery_range_info -- Information module for Discovery Range
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.discovery_range_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Discovery Range.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-recordsToReturn"></div>
                    <b>recordsToReturn</b>
                    <a class="ansibleOptionLink" href="#parameter-recordsToReturn" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>RecordsToReturn path parameter. Number of records to return.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-startIndex"></div>
                    <b>startIndex</b>
                    <a class="ansibleOptionLink" href="#parameter-startIndex" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>StartIndex path parameter. Start index.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Discovery Range reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Discovery Range object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Discovery Range
      cisco.dnac.discovery_range_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        startIndex: 0
        recordsToReturn: 0
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;response&quot;: [
        {
          &quot;attributeInfo&quot;: {},
          &quot;cdpLevel&quot;: 0,
          &quot;deviceIds&quot;: &quot;string&quot;,
          &quot;discoveryCondition&quot;: &quot;string&quot;,
          &quot;discoveryStatus&quot;: &quot;string&quot;,
          &quot;discoveryType&quot;: &quot;string&quot;,
          &quot;enablePasswordList&quot;: &quot;string&quot;,
          &quot;globalCredentialIdList&quot;: [
            &quot;string&quot;
          ],
          &quot;httpReadCredential&quot;: {
            &quot;comments&quot;: &quot;string&quot;,
            &quot;credentialType&quot;: &quot;string&quot;,
            &quot;description&quot;: &quot;string&quot;,
            &quot;id&quot;: &quot;string&quot;,
            &quot;instanceTenantId&quot;: &quot;string&quot;,
            &quot;instanceUuid&quot;: &quot;string&quot;,
            &quot;password&quot;: &quot;string&quot;,
            &quot;port&quot;: 0,
            &quot;secure&quot;: true,
            &quot;username&quot;: &quot;string&quot;
          },
          &quot;httpWriteCredential&quot;: {
            &quot;comments&quot;: &quot;string&quot;,
            &quot;credentialType&quot;: &quot;string&quot;,
            &quot;description&quot;: &quot;string&quot;,
            &quot;id&quot;: &quot;string&quot;,
            &quot;instanceTenantId&quot;: &quot;string&quot;,
            &quot;instanceUuid&quot;: &quot;string&quot;,
            &quot;password&quot;: &quot;string&quot;,
            &quot;port&quot;: 0,
            &quot;secure&quot;: true,
            &quot;username&quot;: &quot;string&quot;
          },
          &quot;id&quot;: &quot;string&quot;,
          &quot;ipAddressList&quot;: &quot;string&quot;,
          &quot;ipFilterList&quot;: &quot;string&quot;,
          &quot;isAutoCdp&quot;: true,
          &quot;lldpLevel&quot;: 0,
          &quot;name&quot;: &quot;string&quot;,
          &quot;netconfPort&quot;: &quot;string&quot;,
          &quot;numDevices&quot;: 0,
          &quot;parentDiscoveryId&quot;: &quot;string&quot;,
          &quot;passwordList&quot;: &quot;string&quot;,
          &quot;preferredMgmtIPMethod&quot;: &quot;string&quot;,
          &quot;protocolOrder&quot;: &quot;string&quot;,
          &quot;retryCount&quot;: 0,
          &quot;snmpAuthPassphrase&quot;: &quot;string&quot;,
          &quot;snmpAuthProtocol&quot;: &quot;string&quot;,
          &quot;snmpMode&quot;: &quot;string&quot;,
          &quot;snmpPrivPassphrase&quot;: &quot;string&quot;,
          &quot;snmpPrivProtocol&quot;: &quot;string&quot;,
          &quot;snmpRoCommunity&quot;: &quot;string&quot;,
          &quot;snmpRoCommunityDesc&quot;: &quot;string&quot;,
          &quot;snmpRwCommunity&quot;: &quot;string&quot;,
          &quot;snmpRwCommunityDesc&quot;: &quot;string&quot;,
          &quot;snmpUserName&quot;: &quot;string&quot;,
          &quot;timeOut&quot;: 0,
          &quot;updateMgmtIp&quot;: true,
          &quot;userNameList&quot;: &quot;string&quot;
        }
      ],
      &quot;version&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

